Update to Release 2 - Modified MPC with microcycle length controller, correct zero page addressing modes

--- a/Src/RTL/M65C02.ucf
+++ b/Src/RTL/M65C02.ucf
@@ -3,7 +3,8 @@ NET "Clk" TNM_NET = Clk;
 #TIMESPEC TS_Clk = PERIOD "Clk" 6.000 ns HIGH 50%;  #Virtex 5 LXT after removal ~|(reg)
 #TIMESPEC TS_Clk = PERIOD "Clk" 15 ns HIGH 50%;     #Spartan II after removal ~|(reg)
 #TIMESPEC TS_Clk = PERIOD "Clk" 9.755 ns HIGH 50%;  #Spartan 3AN before removal ~|(reg)
-TIMESPEC TS_Clk = PERIOD "Clk" 9.091 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 9.091 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+TIMESPEC TS_Clk = PERIOD "Clk" 9.250 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
 NET "A<0>" LOC = A3;
 NET "A<1>" LOC = B3;
 NET "A<2>" LOC = A4;
