--- a/Src/RTL/M65C02.ucf
+++ b/Src/RTL/M65C02.ucf
@@ -3,149 +3,18 @@ NET "Clk" TNM_NET = Clk;
 #TIMESPEC TS_Clk = PERIOD "Clk" 6.000 ns HIGH 50%;  #Virtex 5 LXT after removal ~|(reg)
 #TIMESPEC TS_Clk = PERIOD "Clk" 15 ns HIGH 50%;     #Spartan II after removal ~|(reg)
 #TIMESPEC TS_Clk = PERIOD "Clk" 9.755 ns HIGH 50%;  #Spartan 3AN before removal ~|(reg)
-#TIMESPEC TS_Clk = PERIOD "Clk" 9.091 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
-TIMESPEC TS_Clk = PERIOD "Clk" 9.250 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
-NET "A<0>" LOC = A3;
-NET "A<1>" LOC = B3;
-NET "A<2>" LOC = A4;
-NET "A<3>" LOC = B4;
-NET "A<4>" LOC = A5;
-NET "A<5>" LOC = A6;
-NET "A<6>" LOC = B6;
-NET "A<7>" LOC = A7;
-NET "X<0>" LOC = A8;
-NET "X<1>" LOC = B8;
-NET "X<2>" LOC = A9;
-NET "X<3>" LOC = A10;
-NET "X<4>" LOC = B10;
-NET "X<5>" LOC = A11;
-NET "X<6>" LOC = A12;
-NET "X<7>" LOC = B12;
-NET "Y<0>" LOC = C8;
-NET "Y<1>" LOC = D8;
-NET "Y<2>" LOC = C9;
-NET "Y<3>" LOC = D9;
-NET "Y<4>" LOC = C10;
-NET "Y<5>" LOC = D10;
-NET "Y<6>" LOC = C11;
-NET "Y<7>" LOC = D11;
-NET "P<0>" LOC = C4;
-NET "P<1>" LOC = C5;
-NET "P<2>" LOC = D5;
-NET "P<3>" LOC = C6;
-NET "P<4>" LOC = C7;
-NET "P<5>" LOC = B15;
-NET "P<6>" LOC = D7;
-NET "P<7>" LOC = E7;
-NET "S<0>" LOC = F8;
-NET "S<1>" LOC = E10;
-NET "S<2>" LOC = C12;
-NET "S<3>" LOC = D13;
-NET "S<4>" LOC = C13;
-NET "S<5>" LOC = A13;
-NET "S<6>" LOC = A14;
-NET "S<7>" LOC = B14;
-NET "Rst" LOC = F10;
-NET "Int" LOC = E6;
-NET "Clk" LOC = N9;
-NET "AO<0>" LOC = C16;
-NET "AO<1>" LOC = C15;
-NET "AO<2>" LOC = D14;
-NET "AO<3>" LOC = D15;
-NET "AO<4>" LOC = D16;
-NET "AO<5>" LOC = E13;
-NET "AO<6>" LOC = E14;
-NET "AO<7>" LOC = E16;
-NET "AO<8>" LOC = F13;
-NET "AO<9>" LOC = F14;
-NET "AO<10>" LOC = F15;
-NET "AO<11>" LOC = F16;
-NET "AO<12>" LOC = G13;
-NET "AO<13>" LOC = G14;
-NET "AO<14>" LOC = G16;
-NET "AO<15>" LOC = H16;
-NET "DI<0>" LOC = H10;
-NET "DI<1>" LOC = H11;
-NET "DI<2>" LOC = J10;
-NET "DI<3>" LOC = J11;
-NET "DI<4>" LOC = K11;
-NET "DI<5>" LOC = J12;
-NET "DI<6>" LOC = K12;
-NET "DI<7>" LOC = K13;
-NET "DO<0>" LOC = H13;
-NET "DO<1>" LOC = H14;
-NET "DO<2>" LOC = H15;
-NET "DO<3>" LOC = J13;
-NET "DO<4>" LOC = J14;
-NET "DO<5>" LOC = J16;
-NET "DO<6>" LOC = K14;
-NET "DO<7>" LOC = K15;
-NET "IR<0>" LOC = R1;
-NET "IR<1>" LOC = P1;
-NET "IR<2>" LOC = P2;
-NET "IR<3>" LOC = N1;
-NET "IR<4>" LOC = N2;
-NET "IR<5>" LOC = N3;
-NET "IR<6>" LOC = M1;
-NET "IR<7>" LOC = M3;
-NET "OP1<0>" LOC = M4;
-NET "OP1<1>" LOC = L1;
-NET "OP1<2>" LOC = L2;
-NET "OP1<3>" LOC = L3;
-NET "OP1<4>" LOC = L4;
-NET "OP1<5>" LOC = K1;
-NET "OP1<6>" LOC = K3;
-NET "OP1<7>" LOC = K4;
-NET "OP2<0>" LOC = J1;
-NET "OP2<1>" LOC = J2;
-NET "OP2<2>" LOC = J3;
-NET "OP2<3>" LOC = J4;
-NET "OP2<4>" LOC = H1;
-NET "OP2<5>" LOC = H3;
-NET "OP2<6>" LOC = H4;
-NET "OP2<7>" LOC = H5;
-NET "PC<0>" LOC = J6;
-NET "PC<1>" LOC = H6;
-NET "PC<2>" LOC = G4;
-NET "PC<3>" LOC = G3;
-NET "PC<4>" LOC = G2;
-NET "PC<5>" LOC = G1;
-NET "PC<6>" LOC = F3;
-NET "PC<7>" LOC = F1;
-NET "PC<8>" LOC = E3;
-NET "PC<9>" LOC = E2;
-NET "PC<10>" LOC = E1;
-NET "PC<11>" LOC = D4;
-NET "PC<12>" LOC = D3;
-NET "PC<13>" LOC = D1;
-NET "PC<14>" LOC = C2;
-NET "PC<15>" LOC = C1;
-NET "Ack_In" LOC = R15;
-NET "RMW" LOC = P16;
-NET "IRQ_Msk" LOC = L13;
-NET "Mode<0>" LOC = P15;
-NET "Mode<1>" LOC = N14;
-NET "Mode<2>" LOC = N16;
-NET "IO_Op<1>" LOC = R2;
-NET "IO_Op<0>" LOC = M14;
-NET "Done" LOC = M16;
-NET "SC" LOC = M15;
-NET "Vector<0>" LOC = T2;
-NET "Vector<1>" LOC = R3;
-NET "Vector<2>" LOC = N4;
-NET "Vector<3>" LOC = P4;
-NET "Vector<4>" LOC = R5;
-NET "Vector<5>" LOC = P5;
-NET "Vector<6>" LOC = N5;
-NET "Vector<7>" LOC = P6;
-NET "Vector<8>" LOC = N6;
-NET "Vector<9>" LOC = R7;
-NET "Vector<10>" LOC = P7;
-NET "Vector<11>" LOC = N7;
-NET "Vector<12>" LOC = P8;
-NET "Vector<13>" LOC = N8;
-NET "Vector<14>" LOC = R9;
-NET "Vector<15>" LOC = P9;
+TIMESPEC TS_Clk = PERIOD "Clk" 9.091 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 10.000 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 9.500 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 9.375 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 9.250 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+#TIMESPEC TS_Clk = PERIOD "Clk" 9.150 ns HIGH 50%;  #Spartan 3AN after removal ~|(reg)
+NET "MemTyp<0>" IOSTANDARD = "LVTTL";
+NET "MemTyp<1>" IOSTANDARD = "LVTTL";
+NET "MC<0>" IOSTANDARD = "LVTTL";
+NET "MC<1>" IOSTANDARD = "LVTTL";
+NET "uLen<0>" IOSTANDARD = "LVTTL";
+NET "uLen<1>" IOSTANDARD = "LVTTL";
 NET "SC" IOSTANDARD = "LVTTL";
 NET "Vector<0>" IOSTANDARD = "LVTTL";
 NET "Vector<1>" IOSTANDARD = "LVTTL";
@@ -171,7 +40,7 @@ NET "A<4>" IOSTANDARD = "LVTTL";
 NET "A<5>" IOSTANDARD = "LVTTL";
 NET "A<6>" IOSTANDARD = "LVTTL";
 NET "A<7>" IOSTANDARD = "LVTTL";
-NET "Ack_In" IOSTANDARD = "LVTTL";
+NET "Wait" IOSTANDARD = "LVTTL";
 NET "Clk" IOSTANDARD = "LVTTL";
 NET "IR<0>" IOSTANDARD = "LVTTL";
 NET "IR<1>" IOSTANDARD = "LVTTL";
@@ -513,11 +382,152 @@ NET "IO_Op<1>" DRIVE = 4;
 NET "IO_Op<0>" SLEW = FAST;
 NET "IO_Op<1>" SLEW = FAST;
 NET "A<7>" SLEW = FAST;
-NET "IntSvc" LOC = L16;
-NET "Rdy" LOC = K16;
 NET "Rdy" IOSTANDARD = "LVTTL";
 NET "Rdy" DRIVE = 4;
 NET "Rdy" SLEW = FAST;
 NET "IntSvc" IOSTANDARD = "LVTTL";
 NET "IntSvc" DRIVE = 4;
-
+#pin2ucf - Sat Nov 17 20:32:09 2012
+#The following constraints were newly added
+NET "IR<6>" LOC = L13;
+NET "DI<7>" LOC = J14;
+NET "PC<8>" LOC = J12;
+NET "Y<1>" LOC = L1;
+NET "OP2<3>" LOC = K15;
+NET "AO<1>" LOC = A6;
+NET "IR<7>" LOC = T8;
+NET "Y<2>" LOC = J3;
+NET "Clk" LOC = A8;
+NET "PC<9>" LOC = D13;
+NET "OP2<4>" LOC = R11;
+NET "IRQ_Msk" LOC = N3;
+NET "AO<2>" LOC = A13;
+NET "Y<3>" LOC = D7;
+NET "AO<10>" LOC = D10;
+NET "OP2<5>" LOC = F13;
+NET "RMW" LOC = J1;
+NET "AO<3>" LOC = D11;
+NET "PC<10>" LOC = T11;
+NET "Y<4>" LOC = E7;
+NET "AO<11>" LOC = C6;
+NET "OP2<6>" LOC = M15;
+NET "S<0>" LOC = R7;
+NET "AO<4>" LOC = C12;
+NET "PC<11>" LOC = P10;
+NET "Y<5>" LOC = J6;
+NET "AO<12>" LOC = C11;
+NET "OP2<7>" LOC = A14;
+NET "S<1>" LOC = P6;
+NET "AO<5>" LOC = B10;
+NET "PC<12>" LOC = B4;
+NET "Y<6>" LOC = J4;
+NET "AO<13>" LOC = A11;
+NET "S<2>" LOC = D3;
+NET "P<0>" LOC = P1;
+NET "AO<6>" LOC = C10;
+NET "PC<13>" LOC = H5;
+NET "Y<7>" LOC = M3;
+NET "AO<14>" LOC = B12;
+NET "S<3>" LOC = T10;
+NET "P<1>" LOC = L2;
+NET "AO<7>" LOC = A7;
+NET "PC<14>" LOC = M16;
+NET "AO<15>" LOC = B6;
+NET "S<4>" LOC = C4;
+NET "P<2>" LOC = M4;
+NET "Rst" LOC = J16;
+NET "AO<8>" LOC = E10;
+NET "PC<15>" LOC = F3;
+NET "S<5>" LOC = A3;
+NET "P<3>" LOC = B3;
+NET "AO<9>" LOC = A12;
+NET "S<6>" LOC = F8;
+NET "P<4>" LOC = G4;
+NET "S<7>" LOC = C9;
+NET "P<5>" LOC = M10;
+NET "OP1<0>" LOC = P2;
+NET "P<6>" LOC = N8;
+NET "OP1<1>" LOC = C1;
+NET "P<7>" LOC = E13;
+NET "X<0>" LOC = G1;
+NET "OP1<2>" LOC = P13;
+NET "X<1>" LOC = K3;
+NET "OP1<3>" LOC = N12;
+NET "X<2>" LOC = G2;
+NET "OP1<4>" LOC = N16;
+NET "X<3>" LOC = K1;
+NET "OP1<5>" LOC = P8;
+NET "X<4>" LOC = D1;
+NET "A<0>" LOC = H3;
+NET "OP1<6>" LOC = N2;
+NET "X<5>" LOC = E1;
+NET "A<1>" LOC = K4;
+NET "OP1<7>" LOC = D5;
+NET "X<6>" LOC = L3;
+NET "A<2>" LOC = R5;
+NET "SC" LOC = D14;
+NET "X<7>" LOC = L4;
+NET "A<3>" LOC = T4;
+NET "IO_Op<0>" LOC = C5;
+NET "IO_Op<1>" LOC = N11;
+NET "A<4>" LOC = T6;
+NET "A<5>" LOC = T5;
+NET "A<6>" LOC = N1;
+NET "A<7>" LOC = D4;
+NET "Vector<10>" LOC = G12;
+NET "IntSvc" LOC = C13;
+NET "Vector<11>" LOC = H10;
+NET "Mode<0>" LOC = H6;
+NET "Vector<12>" LOC = F16;
+NET "Mode<1>" LOC = J2;
+NET "DO<0>" LOC = M1;
+NET "Vector<0>" LOC = G16;
+NET "Vector<13>" LOC = F15;
+NET "Mode<2>" LOC = E2;
+NET "DO<1>" LOC = D9;
+NET "Vector<1>" LOC = H13;
+NET "Vector<14>" LOC = E16;
+NET "DO<2>" LOC = G3;
+NET "Vector<2>" LOC = H16;
+NET "Vector<15>" LOC = D12;
+NET "DO<3>" LOC = A10;
+NET "Vector<3>" LOC = K16;
+NET "Done" LOC = A4;
+NET "PC<0>" LOC = H14;
+NET "DO<4>" LOC = F1;
+NET "Vector<4>" LOC = H11;
+NET "DI<0>" LOC = K11;
+NET "PC<1>" LOC = C7;
+NET "DO<5>" LOC = H4;
+NET "Vector<5>" LOC = F14;
+NET "Rdy" LOC = C15;
+NET "IR<0>" LOC = P15;
+NET "DI<1>" LOC = K12;
+NET "PC<2>" LOC = A5;
+NET "DO<6>" LOC = B8;
+NET "Vector<6>" LOC = G11;
+NET "IR<1>" LOC = P16;
+NET "DI<2>" LOC = J11;
+NET "PC<3>" LOC = C8;
+NET "DO<7>" LOC = D8;
+NET "Vector<7>" LOC = D16;
+NET "IR<2>" LOC = M14;
+NET "DI<3>" LOC = K13;
+NET "PC<4>" LOC = E14;
+NET "Int" LOC = K6;
+NET "Vector<8>" LOC = G13;
+NET "IR<3>" LOC = M13;
+NET "DI<4>" LOC = H15;
+NET "PC<5>" LOC = J13;
+NET "OP2<0>" LOC = B15;
+NET "Vector<9>" LOC = G14;
+NET "IR<4>" LOC = H1;
+NET "DI<5>" LOC = J10;
+NET "PC<6>" LOC = D15;
+NET "OP2<1>" LOC = L16;
+NET "IR<5>" LOC = L14;
+NET "DI<6>" LOC = K14;
+NET "PC<7>" LOC = B14;
+NET "Y<0>" LOC = E3;
+NET "OP2<2>" LOC = C16;
+NET "AO<0>" LOC = A9;
