Updated M65C02 processor to incorporate last Block RAM as Boot/Monitor RAM/ROM.

--- a/Src/RTL/M65C02.ucf
+++ b/Src/RTL/M65C02.ucf
@@ -1,64 +1,15 @@
 CONFIG VCCAUX=3.3;
 NET "Clk" TNM_NET = Clk;
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.954 ns HIGH 50%;          # 58.9824 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.667 ns HIGH 50%;          # 60.000 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;          # 64.000 MHz
+TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;          # 66.006 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;          # 73.728 MHz
-TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;          # 75.472 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;          # 75.472 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 12.500 ns HIGH 50%;          # 80.000 MHz
 NET "Buf_ClkIn" TNM_NET = Buf_ClkIn;
 #TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;  # 18.432 MHz
 TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;  # 20.000 MHz
-NET "DB<7>"  LOC = "P35" ;
-NET "DB<6>"  LOC = "P36" ;
-NET "DB<5>"  LOC = "P37" ;
-NET "DB<4>"  LOC = "P40" ;
-NET "DB<3>"  LOC = "P41" ;
-NET "DB<2>"  LOC = "P43" ;
-NET "DB<1>"  LOC = "P44" ;
-NET "DB<0>"  LOC = "P49" ;
-NET "A<15>"  LOC = "P25" ;
-NET "A<14>"  LOC = "P28" ;
-NET "A<13>"  LOC = "P29" ;
-NET "A<12>"  LOC = "P30" ;
-NET "A<11>"  LOC = "P31" ;
-NET "A<10>"  LOC = "P32" ;
-NET "A<9>"   LOC = "P33" ;
-NET "A<8>"   LOC = "P34" ;
-NET "A<7>"   LOC = "P50" ;
-NET "A<6>"   LOC = "P52" ;
-NET "A<5>"   LOC = "P56" ;
-NET "A<4>"   LOC = "P57" ;
-NET "A<3>"   LOC = "P59" ;
-NET "A<2>"   LOC = "P60" ;
-NET "A<1>"   LOC = "P61" ;
-NET "A<0>"   LOC = "P62" ;
-NET "XA<3>"  LOC = "P70" ;
-NET "XA<2>"  LOC = "P71" ;
-NET "XA<1>"  LOC = "P72" ;
-NET "XA<0>"  LOC = "P73" ;
-NET "nCE<3>" LOC = "P19" ;
-NET "nCE<2>" LOC = "P20" ;
-NET "nCE<1>" LOC = "P64" ;
-NET "nCE<0>" LOC = "P65" ;
-NET "nWr"    LOC = "P23" ;
-NET "nOE"    LOC = "P24" ;
-NET "RnW"    LOC = "P15" ;
-NET "Phi2O"  LOC = "P9" ;
-NET "Phi1O"  LOC = "P10" ;
-NET "Sync"   LOC = "P13" ;
-NET "Rdy"    LOC = "P16" ;
-NET "nWait"  LOC = "P48" ;
-NET "nVP"    LOC = "P78" ;
-NET "nML"    LOC = "P12" ;
-NET "BE_In"  LOC = "P39" ;
-NET "nSO"    LOC = "P21" ;
-NET "nNMI"   LOC = "P68" ;
-NET "nIRQ"   LOC = "P77" ;
-NET "ClkIn"  LOC = "P88" ;
-NET "nRst"   LOC = "P7" ;
-NET "nRstO"  LOC = "P6" ;
-NET "nSel"   LOC = "P27" ;
-NET "SCk"    LOC = "P53" ;
-NET "MOSI"   LOC = "P46" ;
-NET "MISO"   LOC = "P51" ;
 NET "DB<0>"  IOSTANDARD = "LVCMOS33";
 NET "DB<1>"  IOSTANDARD = "LVCMOS33";
 NET "DB<2>"  IOSTANDARD = "LVCMOS33";
@@ -94,7 +45,7 @@ NET "XA<3>"  IOSTANDARD = "LVCMOS33";
 NET "nWr"    IOSTANDARD = "LVCMOS33";
 NET "nOE"    IOSTANDARD = "LVCMOS33";
 NET "RnW"    IOSTANDARD = "LVCMOS33";
-NET "Phi1O"  IOSTANDARD = "LVCMOS33";
+NET "Phi1O" IOSTANDARD = "LVCMOS33";
 NET "Phi2O"  IOSTANDARD = "LVCMOS33";
 NET "Sync"   IOSTANDARD = "LVCMOS33";
 NET "nML"    IOSTANDARD = "LVCMOS33";
@@ -113,3 +64,59 @@ NET "SCk"    IOSTANDARD = "LVCMOS33";
 NET "MOSI"   IOSTANDARD = "LVCMOS33";
 NET "MISO"   IOSTANDARD = "LVCMOS33";
 NET "nRstO"  PULLUP;
+NET "nWP_In" IOSTANDARD = "LVCMOS33";
+NET "nWP_In" PULLUP;
+NET "XA<3>" LOC = "P70" ;
+NET "XA<2>" LOC = "P71" ;
+NET "XA<1>" LOC = "P72" ;
+NET "XA<0>" LOC = "P73" ;
+NET "Sync" LOC = "P13" ;
+NET "SCk" LOC = "P53" ;
+NET "RnW" LOC = "P15" ;
+NET "Rdy" LOC = "P16" ;
+NET "Phi2O" LOC = "P9" ;
+NET "Phi1O" LOC = "P10" ;
+NET "nWr" LOC = "P23" ;
+NET "nWP_In" LOC = "P98" ;
+NET "nWait" LOC = "P48" ;
+NET "nVP" LOC = "P78" ;
+NET "nSO" LOC = "P21" ;
+NET "nSel" LOC = "P27" ;
+NET "nRstO" LOC = "P6" ;
+NET "nRst" LOC = "P7" ;
+NET "nOE" LOC = "P24" ;
+NET "nNMI" LOC = "P68" ;
+NET "nML" LOC = "P12" ;
+NET "nIRQ" LOC = "P77" ;
+NET "nCE<3>" LOC = "P19" ;
+NET "nCE<2>" LOC = "P20" ;
+NET "nCE<1>" LOC = "P64" ;
+NET "nCE<0>" LOC = "P65" ;
+NET "MOSI" LOC = "P46" ;
+NET "MISO" LOC = "P51" ;
+NET "DB<7>" LOC = "P35" ;
+NET "DB<6>" LOC = "P36" ;
+NET "DB<5>" LOC = "P37" ;
+NET "DB<4>" LOC = "P40" ;
+NET "DB<3>" LOC = "P41" ;
+NET "DB<2>" LOC = "P43" ;
+NET "DB<1>" LOC = "P44" ;
+NET "DB<0>" LOC = "P49" ;
+NET "BE_In" LOC = "P39" ;
+NET "A<15>" LOC = "P25" ;
+NET "A<14>" LOC = "P28" ;
+NET "A<13>" LOC = "P29" ;
+NET "A<12>" LOC = "P30" ;
+NET "A<11>" LOC = "P31" ;
+NET "A<10>" LOC = "P32" ;
+NET "A<9>" LOC = "P33" ;
+NET "A<8>" LOC = "P34" ;
+NET "A<7>" LOC = "P50" ;
+NET "A<6>" LOC = "P52" ;
+NET "A<5>" LOC = "P56" ;
+NET "A<4>" LOC = "P57" ;
+NET "A<3>" LOC = "P59" ;
+NET "A<2>" LOC = "P60" ;
+NET "A<1>" LOC = "P61" ;
+NET "A<0>" LOC = "P62" ;
+NET "ClkIn" LOC = "P88" ;
