--- a/Src/RTL/M65C02.ucf
+++ b/Src/RTL/M65C02.ucf
@@ -2,14 +2,17 @@ CONFIG VCCAUX=3.3;
 NET "Clk" TNM_NET = Clk;
 #TIMESPEC TS_Clk = PERIOD "Clk" 16.954 ns HIGH 50%;          # 58.9824 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 16.667 ns HIGH 50%;          # 60.000 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;          # 64.000 MHz
-TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;          # 66.006 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.000 ns HIGH 50%;          # 62.500 MHz
+TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;          # 64.000 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.258 ns HIGH 50%;          # 65.536 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;          # 66.006 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;          # 73.728 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;          # 75.472 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 12.500 ns HIGH 50%;          # 80.000 MHz
 NET "Buf_ClkIn" TNM_NET = Buf_ClkIn;
 #TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;  # 18.432 MHz
-TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;  # 20.000 MHz
+#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;  # 20.000 MHz
+TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn"  3.000 ns HIGH 50%;  # 333.333 MHz
 NET "DB<0>"  IOSTANDARD = "LVCMOS33";
 NET "DB<1>"  IOSTANDARD = "LVCMOS33";
 NET "DB<2>"  IOSTANDARD = "LVCMOS33";
@@ -120,3 +123,39 @@ NET "A<2>" LOC = "P60" ;
 NET "A<1>" LOC = "P61" ;
 NET "A<0>" LOC = "P62" ;
 NET "ClkIn" LOC = "P88" ;
+#
+INST "FE1" AREA_GROUP=FE1_Grp ;
+AREA_GROUP FE1_Grp COMPRESSION=100 ;
+AREA_GROUP FE1_Grp PLACE=CLOSED;
+AREA_GROUP FE1_Grp RANGE=SLICE_X7Y28:SLICE_X7Y29;
+#
+INST "FE2" AREA_GROUP=FE2_Grp ;
+AREA_GROUP FE2_Grp COMPRESSION=100 ;
+AREA_GROUP FE2_Grp PLACE=CLOSED;
+AREA_GROUP FE2_Grp RANGE=SLICE_X7Y25:SLICE_X7Y27;
+#
+INST "FE3" AREA_GROUP=FE3_Grp ;
+AREA_GROUP FE3_Grp COMPRESSION=100 ;
+AREA_GROUP FE3_Grp PLACE=CLOSED;
+AREA_GROUP FE3_Grp RANGE=SLICE_X23Y22:SLICE_X23Y23;
+#
+INST "ClkGen" AREA_GROUP=ClkGen_Grp ;
+AREA_GROUP ClkGen_Grp COMPRESSION=100 ;
+AREA_GROUP ClkGen_Grp PLACE=CLOSED;
+AREA_GROUP ClkGen_Grp RANGE=SLICE_X6Y30:SLICE_X7Y31;
+#
+INST "uP/ALU" AREA_GROUP=ALU_Grp ;
+AREA_GROUP ALU_Grp COMPRESSION=100 ;
+AREA_GROUP ALU_Grp PLACE=CLOSED;
+AREA_GROUP ALU_Grp RANGE=SLICE_X16Y0:SLICE_X21Y31;
+#
+INST "uP/AddrGen" AREA_GROUP=AddrGen_Grp ;
+AREA_GROUP AddrGen_Grp COMPRESSION=100 ;
+AREA_GROUP AddrGen_Grp PLACE=CLOSED;
+AREA_GROUP AddrGen_Grp RANGE=SLICE_X6Y8:SLICE_X13Y20;
+#
+INST "uP/MPCv4" AREA_GROUP=MPCv4_Grp ;
+AREA_GROUP MPCv4_Grp COMPRESSION=100 ;
+AREA_GROUP MPCv4_Grp PLACE=CLOSED;
+AREA_GROUP MPCv4_Grp RANGE=SLICE_X6Y4:SLICE_X13Y7;
+#
