Update with improvement in the internal bus multiplexers that improve combinatorial path delays more than 35%.

--- a/Src/RTL/M65C02.ucf
+++ b/Src/RTL/M65C02.ucf
@@ -1,161 +1,89 @@
 CONFIG VCCAUX=3.3;
+#
 NET "Clk" TNM_NET = Clk;
-#TIMESPEC TS_Clk = PERIOD "Clk" 16.954 ns HIGH 50%;          # 58.9824 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 16.667 ns HIGH 50%;          # 60.000 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 16.000 ns HIGH 50%;          # 62.500 MHz
-TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;          # 64.000 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 15.258 ns HIGH 50%;          # 65.536 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;          # 66.006 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;          # 73.728 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;          # 75.472 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 12.500 ns HIGH 50%;          # 80.000 MHz
+#
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.954 ns HIGH 50%;              # 58.9824 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.667 ns HIGH 50%;              # 60.000 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 16.000 ns HIGH 50%;              # 62.500 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;              # 64.000 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.258 ns HIGH 50%;              # 65.536 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;              # 66.006 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 15.000 ns HIGH 50%;              # 66.667 MHz
+TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;              # 73.728 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;              # 75.472 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 13.000 ns HIGH 50%;              # 76.923 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 12.500 ns HIGH 50%;              # 80.000 MHz
+#
 NET "Buf_ClkIn" TNM_NET = Buf_ClkIn;
-#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;  # 18.432 MHz
-#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;  # 20.000 MHz
-TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn"  3.000 ns HIGH 50%;  # 333.333 MHz
-NET "DB<0>"  IOSTANDARD = "LVCMOS33";
-NET "DB<1>"  IOSTANDARD = "LVCMOS33";
-NET "DB<2>"  IOSTANDARD = "LVCMOS33";
-NET "DB<3>"  IOSTANDARD = "LVCMOS33";
-NET "DB<4>"  IOSTANDARD = "LVCMOS33";
-NET "DB<5>"  IOSTANDARD = "LVCMOS33";
-NET "DB<6>"  IOSTANDARD = "LVCMOS33";
-NET "DB<7>"  IOSTANDARD = "LVCMOS33";
-NET "A<0>"   IOSTANDARD = "LVCMOS33";
-NET "A<1>"   IOSTANDARD = "LVCMOS33";
-NET "A<2>"   IOSTANDARD = "LVCMOS33";
-NET "A<3>"   IOSTANDARD = "LVCMOS33";
-NET "A<4>"   IOSTANDARD = "LVCMOS33";
-NET "A<5>"   IOSTANDARD = "LVCMOS33";
-NET "A<6>"   IOSTANDARD = "LVCMOS33";
-NET "A<7>"   IOSTANDARD = "LVCMOS33";
-NET "A<8>"   IOSTANDARD = "LVCMOS33";
-NET "A<9>"   IOSTANDARD = "LVCMOS33";
-NET "A<10>"  IOSTANDARD = "LVCMOS33";
-NET "A<11>"  IOSTANDARD = "LVCMOS33";
-NET "A<12>"  IOSTANDARD = "LVCMOS33";
-NET "A<13>"  IOSTANDARD = "LVCMOS33";
-NET "A<14>"  IOSTANDARD = "LVCMOS33";
-NET "A<15>"  IOSTANDARD = "LVCMOS33";
-NET "nCE<0>" IOSTANDARD = "LVCMOS33";
-NET "nCE<1>" IOSTANDARD = "LVCMOS33";
-NET "nCE<2>" IOSTANDARD = "LVCMOS33";
-NET "nCE<3>" IOSTANDARD = "LVCMOS33";
-NET "XA<0>"  IOSTANDARD = "LVCMOS33";
-NET "XA<1>"  IOSTANDARD = "LVCMOS33";
-NET "XA<2>"  IOSTANDARD = "LVCMOS33";
-NET "XA<3>"  IOSTANDARD = "LVCMOS33";
-NET "nWr"    IOSTANDARD = "LVCMOS33";
-NET "nOE"    IOSTANDARD = "LVCMOS33";
-NET "RnW"    IOSTANDARD = "LVCMOS33";
-NET "Phi1O" IOSTANDARD = "LVCMOS33";
-NET "Phi2O"  IOSTANDARD = "LVCMOS33";
-NET "Sync"   IOSTANDARD = "LVCMOS33";
-NET "nML"    IOSTANDARD = "LVCMOS33";
-NET "nVP"    IOSTANDARD = "LVCMOS33";
-NET "BE_In"  IOSTANDARD = "LVCMOS33";
-NET "Rdy"    IOSTANDARD = "LVCMOS33";
-NET "nWait"  IOSTANDARD = "LVCMOS33";
-NET "nSO"    IOSTANDARD = "LVCMOS33";
-NET "nNMI"   IOSTANDARD = "LVCMOS33";
-NET "nIRQ"   IOSTANDARD = "LVCMOS33";
-NET "ClkIn"  IOSTANDARD = "LVCMOS33";
-NET "nRst"   IOSTANDARD = "LVCMOS33";
-NET "nRstO"  IOSTANDARD = "LVCMOS33";
-NET "nSel"   IOSTANDARD = "LVCMOS33";
-NET "SCk"    IOSTANDARD = "LVCMOS33";
-NET "MOSI"   IOSTANDARD = "LVCMOS33";
-NET "MISO"   IOSTANDARD = "LVCMOS33";
-NET "nRstO"  PULLUP;
-NET "nWP_In" IOSTANDARD = "LVCMOS33";
-NET "nWP_In" PULLUP;
-NET "XA<3>" LOC = "P70" ;
-NET "XA<2>" LOC = "P71" ;
-NET "XA<1>" LOC = "P72" ;
-NET "XA<0>" LOC = "P73" ;
-NET "Sync" LOC = "P13" ;
-NET "SCk" LOC = "P53" ;
-NET "RnW" LOC = "P15" ;
-NET "Rdy" LOC = "P16" ;
-NET "Phi2O" LOC = "P9" ;
-NET "Phi1O" LOC = "P10" ;
-NET "nWr" LOC = "P23" ;
-NET "nWP_In" LOC = "P98" ;
-NET "nWait" LOC = "P48" ;
-NET "nVP" LOC = "P78" ;
-NET "nSO" LOC = "P21" ;
-NET "nSel" LOC = "P27" ;
-NET "nRstO" LOC = "P6" ;
-NET "nRst" LOC = "P7" ;
-NET "nOE" LOC = "P24" ;
-NET "nNMI" LOC = "P68" ;
-NET "nML" LOC = "P12" ;
-NET "nIRQ" LOC = "P77" ;
-NET "nCE<3>" LOC = "P19" ;
-NET "nCE<2>" LOC = "P20" ;
-NET "nCE<1>" LOC = "P64" ;
-NET "nCE<0>" LOC = "P65" ;
-NET "MOSI" LOC = "P46" ;
-NET "MISO" LOC = "P51" ;
-NET "DB<7>" LOC = "P35" ;
-NET "DB<6>" LOC = "P36" ;
-NET "DB<5>" LOC = "P37" ;
-NET "DB<4>" LOC = "P40" ;
-NET "DB<3>" LOC = "P41" ;
-NET "DB<2>" LOC = "P43" ;
-NET "DB<1>" LOC = "P44" ;
-NET "DB<0>" LOC = "P49" ;
-NET "BE_In" LOC = "P39" ;
-NET "A<15>" LOC = "P25" ;
-NET "A<14>" LOC = "P28" ;
-NET "A<13>" LOC = "P29" ;
-NET "A<12>" LOC = "P30" ;
-NET "A<11>" LOC = "P31" ;
-NET "A<10>" LOC = "P32" ;
-NET "A<9>" LOC = "P33" ;
-NET "A<8>" LOC = "P34" ;
-NET "A<7>" LOC = "P50" ;
-NET "A<6>" LOC = "P52" ;
-NET "A<5>" LOC = "P56" ;
-NET "A<4>" LOC = "P57" ;
-NET "A<3>" LOC = "P59" ;
-NET "A<2>" LOC = "P60" ;
-NET "A<1>" LOC = "P61" ;
-NET "A<0>" LOC = "P62" ;
-NET "ClkIn" LOC = "P88" ;
 #
-INST "FE1" AREA_GROUP=FE1_Grp ;
-AREA_GROUP FE1_Grp COMPRESSION=100 ;
-AREA_GROUP FE1_Grp PLACE=CLOSED;
-AREA_GROUP FE1_Grp RANGE=SLICE_X7Y28:SLICE_X7Y29;
+#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;      # 18.432 MHz
+#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;      # 20.000 MHz
+TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn"  3.250 ns HIGH 50%;      # 333.333 MHz
 #
-INST "FE2" AREA_GROUP=FE2_Grp ;
-AREA_GROUP FE2_Grp COMPRESSION=100 ;
-AREA_GROUP FE2_Grp PLACE=CLOSED;
-AREA_GROUP FE2_Grp RANGE=SLICE_X7Y25:SLICE_X7Y27;
+NET "DB<0>"  LOC = "P52" | IOSTANDARD = "LVCMOS33";
+NET "DB<1>"  LOC = "P50" | IOSTANDARD = "LVCMOS33";
+NET "DB<2>"  LOC = "P49" | IOSTANDARD = "LVCMOS33";
+NET "DB<3>"  LOC = "P44" | IOSTANDARD = "LVCMOS33";
+NET "DB<4>"  LOC = "P43" | IOSTANDARD = "LVCMOS33";
+NET "DB<5>"  LOC = "P41" | IOSTANDARD = "LVCMOS33";
+NET "DB<6>"  LOC = "P40" | IOSTANDARD = "LVCMOS33";
+NET "DB<7>"  LOC = "P37" | IOSTANDARD = "LVCMOS33";
+NET "A<0>"   LOC = "P65" | IOSTANDARD = "LVCMOS33";
+NET "A<1>"   LOC = "P64" | IOSTANDARD = "LVCMOS33";
+NET "A<2>"   LOC = "P62" | IOSTANDARD = "LVCMOS33";
+NET "A<3>"   LOC = "P61" | IOSTANDARD = "LVCMOS33";
+NET "A<4>"   LOC = "P60" | IOSTANDARD = "LVCMOS33";
+NET "A<5>"   LOC = "P59" | IOSTANDARD = "LVCMOS33";
+NET "A<6>"   LOC = "P57" | IOSTANDARD = "LVCMOS33";
+NET "A<7>"   LOC = "P56" | IOSTANDARD = "LVCMOS33";
+NET "A<8>"   LOC = "P36" | IOSTANDARD = "LVCMOS33";
+NET "A<9>"   LOC = "P35" | IOSTANDARD = "LVCMOS33";
+NET "A<10>"  LOC = "P34" | IOSTANDARD = "LVCMOS33";
+NET "A<11>"  LOC = "P33" | IOSTANDARD = "LVCMOS33";
+NET "A<12>"  LOC = "P32" | IOSTANDARD = "LVCMOS33";
+NET "A<13>"  LOC = "P31" | IOSTANDARD = "LVCMOS33";
+NET "A<14>"  LOC = "P30" | IOSTANDARD = "LVCMOS33";
+NET "A<15>"  LOC = "P29" | IOSTANDARD = "LVCMOS33";
+NET "XA<0>"  LOC = "P28" | IOSTANDARD = "LVCMOS33";
+NET "XA<1>"  LOC = "P25" | IOSTANDARD = "LVCMOS33";
+NET "XA<2>"  LOC = "P24" | IOSTANDARD = "LVCMOS33";
+NET "XA<3>"  LOC = "P23" | IOSTANDARD = "LVCMOS33";
 #
-INST "FE3" AREA_GROUP=FE3_Grp ;
-AREA_GROUP FE3_Grp COMPRESSION=100 ;
-AREA_GROUP FE3_Grp PLACE=CLOSED;
-AREA_GROUP FE3_Grp RANGE=SLICE_X23Y22:SLICE_X23Y23;
+NET "nCE<0>" LOC = "P70" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "nCE<1>" LOC = "P71" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "nCE<2>" LOC = "P72" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "nCE<3>" LOC = "P73" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 #
-INST "ClkGen" AREA_GROUP=ClkGen_Grp ;
-AREA_GROUP ClkGen_Grp COMPRESSION=100 ;
-AREA_GROUP ClkGen_Grp PLACE=CLOSED;
-AREA_GROUP ClkGen_Grp RANGE=SLICE_X6Y30:SLICE_X7Y31;
+NET "RnW"    LOC = "P10" | IOSTANDARD = "LVCMOS33";
+NET "nOE"    LOC = "P15" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "nWr"    LOC = "P16" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "Sync"   LOC = "P3"  | IOSTANDARD = "LVCMOS33";
+NET "nML"    LOC = "P4"  | IOSTANDARD = "LVCMOS33";
+NET "Rdy"    LOC = "P5"  | IOSTANDARD = "LVCMOS33" | PULLUP;
 #
-INST "uP/ALU" AREA_GROUP=ALU_Grp ;
-AREA_GROUP ALU_Grp COMPRESSION=100 ;
-AREA_GROUP ALU_Grp PLACE=CLOSED;
-AREA_GROUP ALU_Grp RANGE=SLICE_X16Y0:SLICE_X21Y31;
+NET "ClkIn"  LOC = "P88" | IOSTANDARD = "LVCMOS33";
 #
-INST "uP/AddrGen" AREA_GROUP=AddrGen_Grp ;
-AREA_GROUP AddrGen_Grp COMPRESSION=100 ;
-AREA_GROUP AddrGen_Grp PLACE=CLOSED;
-AREA_GROUP AddrGen_Grp RANGE=SLICE_X6Y8:SLICE_X13Y20;
+NET "Phi1O"  LOC = "P13" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+NET "Phi2O"  LOC = "P12" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 #
-INST "uP/MPCv4" AREA_GROUP=MPCv4_Grp ;
-AREA_GROUP MPCv4_Grp COMPRESSION=100 ;
-AREA_GROUP MPCv4_Grp PLACE=CLOSED;
-AREA_GROUP MPCv4_Grp RANGE=SLICE_X6Y4:SLICE_X13Y7;
+NET "nRst"   LOC = "P82" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "BE_In"  LOC = "P68" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nSO"    LOC = "P97" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nNMI"   LOC = "P21" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nIRQ"   LOC = "P7"  | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nVP"    LOC = "P6"  | IOSTANDARD = "LVCMOS33";
 #
+NET "nWait"  LOC = "P48" | IOSTANDARD = "LVCMOS33";
+NET "nRstO"  LOC = "P83" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nWP_In" LOC = "P39" | IOSTANDARD = "LVCMOS33" | PULLUP;
+#
+#NET "nCS<0>" LOC = "P27" | IOSTANDARD = "LVCMOS33";
+#NET "nCS<1>" LOC = "P20" | IOSTANDARD = "LVCMOS33";
+#NET "nCS<2>" LOC = "P19" | IOSTANDARD = "LVCMOS33";
+##
+#NET "SCK"    LOC = "P53" | IOSTANDARD = "LVCMOS33";
+#NET "MOSI"   LOC = "P46" | IOSTANDARD = "LVCMOS33";
+##
+#NET "TxD_A"  LOC = "P90" | IOSTANDARD = "LVCMOS33";
+#NET "TxD_B"  LOC = "P85" | IOSTANDARD = "LVCMOS33";
+ 
