--- a/Src/RTL/M65C02_BrdTst.ucf
+++ b/Src/RTL/M65C02_BrdTst.ucf
@@ -1,28 +1,30 @@
 CONFIG VCCAUX=3.3;
 #
+#NET "RefClkIn" TNM_NET = RefClkIn;
+#
+#TIMESPEC TS_RefClkIn = PERIOD "RefClkIn" 3.250 ns HIGH 50%;     # 333.333 MHz
+#
 NET "Clk" TNM_NET = Clk;
 #
 #TIMESPEC TS_Clk = PERIOD "Clk" 16.954 ns HIGH 50%;              # 58.9824 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 16.667 ns HIGH 50%;              # 60.000 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 16.000 ns HIGH 50%;              # 62.500 MHz
+TIMESPEC TS_Clk = PERIOD "Clk" 16.000 ns HIGH 50%;              # 62.500 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 15.625 ns HIGH 50%;              # 64.000 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 15.258 ns HIGH 50%;              # 65.536 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 15.150 ns HIGH 50%;              # 66.006 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 15.000 ns HIGH 50%;              # 66.667 MHz
-TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;              # 73.728 MHz
+#TIMESPEC TS_Clk = PERIOD "Clk" 13.563 ns HIGH 50%;              # 73.728 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 13.250 ns HIGH 50%;              # 75.472 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk" 13.000 ns HIGH 50%;              # 76.923 MHz
 #TIMESPEC TS_Clk = PERIOD "Clk" 12.500 ns HIGH 50%;              # 80.000 MHz
-#
-#TIMESPEC TS_Clk = PERIOD "Clk" 10.000 ns HIGH 50%;              # 100.000 MHz
-#TIMESPEC TS_Clk = PERIOD "Clk"  7.978 ns HIGH 50%;              # 125.3376 MHz
 #
 NET "Buf_ClkIn" TNM_NET = Buf_ClkIn;
 #
-#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 67.816 ns HIGH 50%;      #  14.7456 MHz
-#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;      #  18.4320 MHz
-#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;      #  20.0000 MHz
-TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn"  4.000 ns HIGH 50%;      # 250.0000 MHz
+#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 54.253 ns HIGH 50%;      # 18.432 MHz
+#TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn" 50.000 ns HIGH 50%;      # 20.000 MHz
+TIMESPEC TS_ClkIn = PERIOD "Buf_ClkIn"  3.250 ns HIGH 50%;      # 333.333 MHz
+#
+#NET "RefClkIn"  LOC = "P9"  | IOSTANDARD = "LVCMOS33";
+#NET "RefClkOut" LOC = "P89" | IOSTANDARD = "LVCMOS33" | SLEW = "SLOW";
 #
 NET "DB<0>"  LOC = "P52" | IOSTANDARD = "LVCMOS33";
 NET "DB<1>"  LOC = "P50" | IOSTANDARD = "LVCMOS33";
@@ -58,41 +60,37 @@ NET "nCE<1>" LOC = "P71" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 NET "nCE<2>" LOC = "P72" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 NET "nCE<3>" LOC = "P73" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 #
-NET "RnW"    LOC = "P10" | IOSTANDARD = "LVCMOS33";
-NET "nOE"    LOC = "P15" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
-NET "nWr"    LOC = "P16" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
-NET "Sync"   LOC = "P3"  | IOSTANDARD = "LVCMOS33";
-NET "nML"    LOC = "P4"  | IOSTANDARD = "LVCMOS33";
-NET "Rdy"    LOC = "P5"  | IOSTANDARD = "LVCMOS33" | PULLUP;
+#NET "RnW"    LOC = "P10" | IOSTANDARD = "LVCMOS33";
+#NET "nOE"    LOC = "P15" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+#NET "nWr"    LOC = "P16" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
+#NET "Sync"   LOC = "P3"  | IOSTANDARD = "LVCMOS33";
+#NET "nML"    LOC = "P4"  | IOSTANDARD = "LVCMOS33";
+#NET "Rdy"    LOC = "P5"  | IOSTANDARD = "LVCMOS33" | PULLUP;
 #
 NET "ClkIn"  LOC = "P88" | IOSTANDARD = "LVCMOS33";
 #
 NET "Phi1O"  LOC = "P13" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
 NET "Phi2O"  LOC = "P12" | IOSTANDARD = "LVCMOS33" | SLEW = "FAST";
-#
+##
 NET "nRst"   LOC = "P82" | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "BE_In"  LOC = "P68" | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "nSO"    LOC = "P97" | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "nNMI"   LOC = "P21" | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "nIRQ"   LOC = "P7"  | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "nVP"    LOC = "P6"  | IOSTANDARD = "LVCMOS33";
-#
+#NET "BE_In"  LOC = "P68" | IOSTANDARD = "LVCMOS33" | PULLUP;
+#NET "nSO"    LOC = "P97" | IOSTANDARD = "LVCMOS33" | PULLUP;
+#NET "nNMI"   LOC = "P21" | IOSTANDARD = "LVCMOS33" | PULLUP;
+#NET "nIRQ"   LOC = "P7"  | IOSTANDARD = "LVCMOS33" | PULLUP;
+#NET "nVP"    LOC = "P6"  | IOSTANDARD = "LVCMOS33";
+##
 NET "nWait"  LOC = "P48" | IOSTANDARD = "LVCMOS33";
-NET "nRstO"  LOC = "P83" | IOSTANDARD = "LVCMOS33" | PULLUP;
-NET "nWP_In" LOC = "P39" | IOSTANDARD = "LVCMOS33" | PULLUP;
-#
-#NET "nCS<0>" LOC = "P27" | IOSTANDARD = "LVCMOS33";
-#NET "nCS<1>" LOC = "P20" | IOSTANDARD = "LVCMOS33";
-#NET "nCS<2>" LOC = "P19" | IOSTANDARD = "LVCMOS33";
+#NET "nRstO"  LOC = "P83" | IOSTANDARD = "LVCMOS33" | PULLUP;
+NET "nRstO"  LOC = "P4" | IOSTANDARD = "LVCMOS33" | PULLUP;     # Test Functions
+#NET "nWP_In" LOC = "P39" | IOSTANDARD = "LVCMOS33" | PULLUP;
 ##
-#NET "SCK"    LOC = "P53" | IOSTANDARD = "LVCMOS33";
-#NET "MOSI"   LOC = "P46" | IOSTANDARD = "LVCMOS33";
-##
-#NET "TxD_A"  LOC = "P90" | IOSTANDARD = "LVCMOS33";
-#NET "TxD_B"  LOC = "P85" | IOSTANDARD = "LVCMOS33";
+NET "nCS<0>" LOC = "P27" | IOSTANDARD = "LVCMOS33";
+NET "nCS<1>" LOC = "P20" | IOSTANDARD = "LVCMOS33";
+NET "nCS<2>" LOC = "P19" | IOSTANDARD = "LVCMOS33";
 #
-NET "LED<4>"  LOC = "P27" | IOSTANDARD = "LVCMOS33";
-NET "LED<3>"  LOC = "P20" | IOSTANDARD = "LVCMOS33";
-NET "LED<2>"  LOC = "P19" | IOSTANDARD = "LVCMOS33";
-NET "LED<1>"  LOC = "P90" | IOSTANDARD = "LVCMOS33";
-NET "LED<0>"  LOC = "P85" | IOSTANDARD = "LVCMOS33";
+NET "SCK"    LOC = "P53" | IOSTANDARD = "LVCMOS33";
+NET "MOSI"   LOC = "P46" | IOSTANDARD = "LVCMOS33";
+#
+NET "TxD_A"  LOC = "P90" | IOSTANDARD = "LVCMOS33";
+NET "TxD_B"  LOC = "P85" | IOSTANDARD = "LVCMOS33";
+ 
